updated school info, salsas work durration, and replaced footer with just contact info. Also fixed textbox overlap onto sizebar of card link

--- a/css/portfolioStyle.css
+++ b/css/portfolioStyle.css
@@ -210,6 +210,7 @@ body
     position: relative;
     top: -25px;
     left: -10px;
+    z-index: 3;
 }
 
 .textBlock
@@ -326,6 +327,15 @@ body
     width: 90%;
     height 90%;
     
+    
+}
+
+footer
+{
+    color: #00678f;
+    width: 100px;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
